--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(tree_programming_lang C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(tree_programming_lang main.c)
+add_executable(tree_programming_lang src/main.c)
